--- a/page2.html
+++ b/page2.html
@@ -6,10 +6,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Pubg mobile</title>
     <link rel="shortcut icon" href="https://image.shutterstock.com/image-vector/esport-logo-helmet-pubg-vector-600w-1556142620.jpg">
+    <style> 
+        h1 {
+          width: 100px;
+          height: 40px;
+          position: relative;
+          animation: myfirst 10s linear 4s infinite alternate;
+        }
+        
+        @keyframes myfirst {
+          0%   {background-color:red; left:0px; right:330px;}
+          25%  {background-color:yellow; left:330px; right: 0px;}
+          50%  {background-color:blue; left:0px; right:330px;}
+          75%  {background-color:green; left:330px; right:0px;}
+          100% {background-color:red; left:0px; right:330px;}
+        }
+        </style>
     
 </head>
 <body>
-    <h1 style="color:red; background-color: yellow; width:200px;">Pubg mobile</h1>
+    <h1 style="color:rgb(0, 0, 0); background-color: yellow; width:180px;">Pubg mobile</h1>
     <div>
         <img src="./pubg.webp" alt="pubg" width="500px" height="350px">
         <br>
@@ -26,7 +42,7 @@
         </ol>
         <a href="./page.html" target="_blank" style="text-decoration: none;">Homepage</a>
         <br>
-        <a href="mailto:">mail</a>
+        <a href="mailto:" style="text-decoration: none;">mail</a>
     </div>
 </body>
 </html>
